# template-py

./: .changelog.md  .gitignore  .pre-commit-config.yaml  README.md  init.py  install.toml  pyproject.toml  tox.ini
.github/workflows/: _tests.yaml  publish_candidate.yaml  publish_main.yaml  tests.yaml  verify.yaml
dependencies/: build.txt  dev.txt
readme/: changelog.md  readme.py
src/!!package!!/: __init__.py
src/package/: _API.py  __init__.py
src/template_py/: _API.py  __init__.py
src/template_py/subpackage/: _API.py
tests/: benchmarking.py  profiling.py
tests/unittests/: profiling.py  test_.py
workflows/: publish_candidate.yaml  publish_main.yaml  tests.yaml
