[build-system]
requires = [
    "setuptools>=64.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "package"
description = ""
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    { name = "Limespy" },
]
requires-python = ">=3.11"
readme = "README.md"
version = "0.0.1"
dynamic = [
    "dependencies",
    "optional-dependencies",
]

[project.scripts]
package = "package:main"

[project.urls]
Homepage = "https://github.com/Limespy/"
Changelog = "https://github.com/Limespy//blob/main/README.md#Changelog"
"Issue Tracker" = "https://github.com/Limespy//issues"

[tool.limedev]
full_name = "Package"

[tool.setuptools.dynamic.dependencies]
file = [
    "dependencies/requirements.txt",
]

[tool.setuptools.dynamic.optional-dependencies.build]
file = "dependencies/requirements_build.txt"

[tool.setuptools.dynamic.optional-dependencies.dev]
file = "dependencies/requirements_dev.txt"

[tool.setuptools.dynamic.optional-dependencies.test_functional]
file = "dependencies/requirements_test_functional.txt"
